# prog_web_demo

./: README.md  app.py  pyproject.toml
static/: base.css
templates/: base.html  gene.html  generate_svg.html  home.html  part_list.html  parts.html  transcript.html  transcript_list.html
