[tool.poetry]
name = "svg_jinja"
version = "0.1.0"
description = ""
authors = ["glaunay <pitooon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
